add import js button htm

--- a/htm/popup.htm
+++ b/htm/popup.htm
@@ -31,6 +31,7 @@
                 <input id="shu" type="button" value="书"/> 
                 <input id="huandeng" type="button" value="幻灯"/> 
                 <input id="daochu" type="button" value="导出"/> 
+                <input id="daoru" type="button" value="导入"/> 
                 <a href="http://site.douban.com/211736/widget/notes/13492219/note/392896362/" target="_blanket">捐助</a>
                 <a href="http://site.douban.com/211736/widget/notes/13492219/note/281401743/" target="_blanket">致谢</a>
                 <a href="http://site.douban.com/211736/widget/notes/13492219/note/392909680/" target="_blanket">帮助</a> 
