read words from TextArea

--- a/htm/wordimport/wordimport.htm
+++ b/htm/wordimport/wordimport.htm
@@ -58,6 +58,7 @@
 <body>
   <div id="div_words" align="center">
     <input id="button_import" type="button" value="点击导入">
+    <!--<input type="file" name="file" id="file">-->
   </div>
   <div class="mod-retweet"> 
     <h1><a>导入单词</a></h1> 
