--- a/htm/wordimport/wordimport.htm
+++ b/htm/wordimport/wordimport.htm
@@ -6,6 +6,7 @@
    <script type="text/javascript" src="../../js/jquery/jquery.min.js"></script>
    <script language="javascript" type="text/jscript" src="../../js/datautil.js"></script>
    <script language="javascript" type="text/jscript" src="../../js/popupbase.js"></script>
+   
    <script type="text/javascript" src="../../js/wordimport/wordimport.js"></script>
    
    <style type="text/css"> 
@@ -76,6 +77,7 @@
  
  
 </body>
-
+<script language="javascript" type="text/jscript" src="../../js/select.js"></script>
+<script language="javascript" type="text/jscript" src="../../js/shortcut.js"></script>
 
 </html>
